- "login" before use - only own cards/cards without owner will be showed/learned